# webstreamer

./: .env.example  .gitignore  Cargo.toml  README.md  output.flv  output.webm  recording.webm
extension/: background.js  id.txt  main.js  manifest.json  popup.html
src/: browser_capture.rs  env.rs  main.rs  twitch.rs  ws.rs
src/twitch/: event_ws.rs
