[package]
name = "webstreamer"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chromiumoxide = "0.7.0"
futures-util = "0.3.31"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
