[package]
name = "webstreamer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
base64 = "0.22.1"
chromiumoxide = "0.7.0"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = "0.12.15"
rustls = { version = "0.23.25", features = ["ring"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twitch_api = { version = "0.7.2", features = ["twitch_oauth2", "helix", "client", "reqwest", "eventsub"] }
